# DeepLearningFrameworkFromScratchCpp

./: CMakeLists.txt  Makefile  README.md
include/: DataBuilder.hpp  Linear.hpp  MSE.hpp  Metrics.hpp  Module.hpp  ReLU.hpp  Sequential.hpp  Softmax.hpp  Trainer.hpp
include/Activations/: ReLU.hpp  Softmax.hpp
include/Data/: DataBuilder2D.hpp
include/Layers/: Linear.hpp
include/Losses/: MSE.hpp
include/Metrics/: Metrics.hpp
include/Module/: Module.hpp
include/Sequential/: Sequential.hpp
include/Trainers/: Trainer2D.hpp
src/: DataBuilder.cpp  Linear.cpp  MSE.cpp  Metrics.cpp  ReLU.cpp  Sequential.cpp  Softmax.cpp  Trainer.cpp  TrainerTemplateImpl.hpp
src/Activations/: ReLU.cpp  Softmax.cpp
src/Data/: DataBuilder2D.cpp
src/Layers/: Linear.cpp
src/Losses/: MSE.cpp
src/Metrics/: Metrics.cpp
src/Sequential/: Sequential.cpp
src/Trainers/: Trainer.cpp  Trainer2DTemplateImpl.hpp
test/: main.cpp
tests/: main.cpp
tests/unitTests/: CMakeLists.txt  LinearUnitTests.cpp  MSEUnitTests.cpp  ReLUUnitTests.cpp  SoftmaxUnitTests.cpp  runAllTests.cpp
tests/unitTests/include/: UnitTestsActivationsReLU.hpp  UnitTestsActivationsSoftmax.hpp  UnitTestsLayersLinear.hpp  UnitTestsLossesMSE.hpp
tests/unitTests/src/: UnitTestsActivationsReLU.cpp  UnitTestsActivationsSoftmax.cpp  UnitTestsLayersLinear.cpp  UnitTestsLossesMSE.cpp
unitTests/: LinearUnitTests.cpp  MSEUnitTests.cpp  ReLUUnitTests.cpp  SoftmaxUnitTests.cpp  runAllTests.cpp
